--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'adopt'
           cache: maven
       - name: Build with Maven
         run: mvn -B install --file pom.xml -Djacoco.skip=true -DdisableXmlReport=true
